--- a/assets/extraweek1.css
+++ b/assets/extraweek1.css
@@ -15,6 +15,7 @@ p {
 }
 #logo img {
   width: 200px;
+  margin-left: 50px;
 }
 #logo {
   text-align: justify;
@@ -50,13 +51,14 @@ header {
   width: 100%;
   text-align: center;
   background-size: contain;
+  height: 600px;
 }
 header #header-text {
   width: 70%;
   margin: auto;
 }
 #header-text button {
-  margin-top: 60px;
+  margin-top: 50px;
   padding: 10px 40px 10px 40px;
   background-color: #f04c2f;
   color: white;
@@ -159,4 +161,8 @@ footer ul a {
 }
 footer p {
   color: white;
+  padding: 5px;
+}
+ul h2 {
+  padding: 10px;
 }
